# HARDN-XDR

./: .cliff.toml  .gitignore  Cargo.toml  HARDN_alerts.txt  Makefile  README.md  cargo.toml  changelog.md  cleanup.sh  hardn-main.sh  hardn-xdr  hardn.py  install.sh  installed_files.txt  kernel  makefile  progs.csv  setup.sh  start_hardn.sh  traffic-clones.json  traffic-views.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: changelog.yml  ci.yml  cis.yml  codeql.yml  deb-build  hardn.yml  validate.yml  version-control.yml
Setup/: Setup.sh  dependencies_to_resolve.txt  hardn-setup.sh  setup.sh
Src/: _init_.py  command_execute.py  hardn-nu-gui.py  hardn.py  hardn_dark.py  hardn_headless.sh  kernal.rs
TODO/: TODO.md
Tests/: test_hardn_dark.py
dark/: hardn_dark.py
debian/: changelog  control  copyright  files  hardn.install  install  postinst  rules
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  docker_image
docs/: CODE_OF_CONDUCT.md  HARDN.md  LICENSE  README.gui.md  README.md  STIG_COMPLIANCE_FIXES.md  TODO.md  citations.md  contributing.md  hardn-mission.md  hardn-setup.md  hardn_rs.md  hardn_steps.txt  hardn_wkflw.md  index.html  index.txt  setup.md  stig.md  ubnt_fips.md  ubnt_stig.md
man/: hardn-xdr.1
setup/: Setup.sh  pyproject.toml  requirements.txt
src/: _init_.py  backend_socket.py  gui_api.rs  gui_input.rs  hardn.py  hardn.rs  hardn_dark.py  hardn_logging.rs  kernal.py  main.rs  main_func.test.rs  menu.sh  packages.py  packages.sh  setup.rs
tests/: test_stig_compliance.sh  validate_stig_enhancements.sh
(+203 files in other folders)
