[package]
name = "hardn"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-web-actors = "4.2.0"
actix = "0.13.0"
actix-files = "0.6.2"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
chrono = "0.4.26"
futures = "0.3.28"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
log = "0.4.19"
env_logger = "0.10.0"
sha2 = "0.10.7"
hex = "0.4.3"
base64 = "0.21.2"
rand = "0.8.5"
rand_core = "0.6.4"
argon2 = "0.5.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
regex = "1.9.1"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
thiserror = "1.0.43"
anyhow = "1.0.71"
fs_extra = "1.3.0"